# SpaceShooter-v2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
SDL2-2.28.5/include/: SDL_surface.h
class/gameplay/effect/: stars.cpp  stars.h  stars_renderer.cpp  stars_renderer.h
class/gameplay/general/: graphics.cpp  graphics.h  world.cpp  world.h
class/gameplay/objects/: asteroid.cpp  asteroid.h
class/gameplay/ship/: test_ship.cpp  test_ship.h
class/utility/: updatable.h
class/utility/component/: component.cpp  component.h  transform.cpp  transform.h
class/utility/graphics/: graphic_object.h  object_renderer.h  screen.cpp  screen.h  sprite.cpp  sprite.h  sprite_renderer.cpp  sprite_renderer.h  updatable.h
class/utility/math/: random_generator.cpp  random_generator.h  rect.cpp  rect.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h
class/utility/physics/: collider.h  rect_collider.cpp  rect_collider.h  rigid_object.cpp  rigid_object.h  transform.cpp  transform.h
data/Cockpit/: arrow.json
data/Engines/: center thruster.json
data/Weapons/: big cannon.json  rocket.json  small cannon.json  sparkle.json  sparkle.template.json
data/Wings/: wedge.json
sprites/: NOT MY WORK.md  Ship - parts.xcf  explosions.xcf
